--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,13 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: papers/report.tex
+          root_file: papers/*.tex
+      - uses: actions/upload-artifact@v2
+        with:
+          name: PDF
+          path: report.pdf
       - name: Copy PDF file
-        run: mkdir docs && cp papers/*.pdf docs/
+        run: mkdir docs && cp *.pdf docs/
       - name: Deploy pages
         uses: peaceiris/actions-gh-pages@v3
         with:
