--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: papers/*.tex
+          root_file: papers/.tex
       - uses: actions/upload-artifact@v2
         with:
           name: PDF
