--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ on:
   pull_request:
     branches: [ main ]
 
+
 jobs:
   build_latex:
     runs-on: ubuntu-latest
@@ -18,7 +19,7 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: papers/report.tex
+          root_file: papers/report.tex papers/report.bib
       - uses: actions/upload-artifact@v2
         with:
           name: PDF
