--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: papers/report.tex
+          working_directory: papers
+          root_file: report.tex
       - uses: actions/upload-artifact@v2
         with:
           name: PDF
