--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,9 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: PDF
-          path: report.pdf
+          path: papers/report.pdf
       - name: Copy PDF file
-        run: mkdir docs && cp *.pdf docs/
+        run: mkdir docs && cp papers/*.pdf docs/
       - name: Deploy pages
         uses: peaceiris/actions-gh-pages@v3
         with:
